--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,11 @@
     <artifactId>commons-fileupload</artifactId>
     <version>1.2</version>
 </dependency>
+    <dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.9</version>
+</dependency>
     
 </dependencies>
   <build>
