checked with db

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/prayaas
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://172.30.36.61:3306/sampledb9
+jdbc.username=tarun
+jdbc.password=khatwani
 jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
